[package]
name = "ippan-explorer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN Block Explorer and API Gateway"

[[bin]]
name = "ippan-explorer"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
