[package]
name = "ippan-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ippan-types = { path = "../types" }
ippan-ai-registry = { path = "../ai_registry" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_bytes = "0.11"
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = "0.8"

[dev-dependencies]
rand = "0.8"