[package]
name = "ippan-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN on-chain governance module — voting, AI model approval, and decentralized decision-making."

[dependencies]
ippan-types = { path = "../types" }
ippan-ai-registry = { path = "../ai_registry" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_bytes = "0.11"
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
tracing = { workspace = true }

[dev-dependencies]
rand = "0.8"
tokio = { workspace = true }
