[package]
name = "ippan-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN on-chain governance module — voting, AI model approval, and decentralized decision-making."

[dependencies]
ippan-types = { path = "../types" }
ippan-ai-registry = { path = "../ai_registry" }
ippan_economics = { path = "../ippan_economics" }
ippan_economics_core = { path = "../economics" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
