[package]
name = "ippan-economics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic round-based emission and fair distribution for IPPAN BlockDAG (DAG-Fair Emission, halving, and validator reward scheduling)"
repository = "https://github.com/dmrl789/IPPAN"

[features]
default = []
integration-tests = []
plotters = ["dep:plotters"]

[dependencies]
# Core workspace crates
ippan-types = { path = "../types" }

# Shared workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }

# Optional plotting and simulation
plotters = { version = "0.3", optional = true, features = ["bitmap_backend", "line_series"] }

[dev-dependencies]
rand = { version = "0.8", features = ["std", "std_rng"] }
rayon = "1.10"
csv = "1.3"
image = "0.24"
tempfile = { workspace = true }
