[package]
name = "ippan_economics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN DAG-Fair Emission Framework - deterministic round-based token economics"
repository = "https://github.com/dmrl789/IPPAN"

[features]
default = []
integration-tests = []
plotters = []

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Math and precision
num-bigint = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }

# Time and hashing
time = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }

# Async and concurrency
tokio = { workspace = true }
parking_lot = { workspace = true }

# IPPAN internal crates
ippan-types = { path = "../types" }
ippan-time = { path = "../time" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
rayon = { workspace = true }
csv = "1.3"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series"] }
image = "0.24"
tempfile = { workspace = true }

[[bench]]
name = "emission_calculations"
harness = false
