[package]
name = "ippan-keygen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN Key Generation and Management Tool"

[[bin]]
name = "ippan-keygen"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
blake3 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
