[package]
name = "ippan-l1-handle-anchors"
version = "0.1.0"
edition = "2021"
description = "L1 handle ownership anchors - minimal storage for handle ownership proofs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }
ippan-l2-handle-registry = { path = "../l2_handle_registry" }

[dev-dependencies]
tokio-test = "0.4"