[package]
name = "ippan-l1-handle-anchors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "L1 handle ownership anchors - minimal storage for handle ownership proofs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }
ippan-l2-handle-registry = { path = "../l2_handle_registry" }

[dev-dependencies]
tokio-test = { workspace = true }