[package]
name = "ippan-l2-fees"
version = "0.1.0"
edition = "2021"
authors = ["IPPAN Team"]
description = "L2 fee system for smart contracts and AI operations"
license = "MIT"
repository = "https://github.com/dmrl789/IPPAN"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"