[package]
name = "ippan-l2-fees"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "L2 fee system for smart contracts and AI operations"
license.workspace = true
repository = "https://github.com/dmrl789/IPPAN"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ippan-types = { path = "../types" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"