[package]
name = "ippan-l2-handle-registry"
version = "0.1.0"
edition = "2021"
description = "L2 handle registry for human-readable ID management and resolution"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }

[dev-dependencies]
tokio-test = "0.4"