[package]
name = "ippan-l2-handle-registry"
version = "0.1.0"
edition = "2021"
description = "L2 handle registry for human-readable ID management and resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }

[dev-dependencies]
tokio-test = "0.4"
