[package]
name = "ippan-l2-handle-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "L2 handle registry for human-readable ID management and resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
ed25519-dalek = { workspace = true }

# IPPAN crates
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }

[dev-dependencies]
tokio-test = { workspace = true }
