[package]
name = "ippan-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
integration-tests = []

[dependencies]
ippan-types = { path = "../types" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
