[package]
name = "ippan-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
integration-tests = []

[dependencies]
ippan-types = { path = "../types" }
ippan-crypto = { path = "../crypto" }
ippan-l1-fees = { path = "../l1_fees" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
