[package]
name = "ippan-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ippan-types = { path = "../types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
bincode = "1.3"
chrono = "0.4"
async-trait = { workspace = true }
