[package]
name = "ippan-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "IPPAN networking layer: deterministic peer discovery, DHT messaging, and round synchronization"

[dependencies]
# Core crates
ippan-types = { path = "../types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
libp2p = { workspace = true }
tempfile = { workspace = true }

# Cryptographic and hashing
blake3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }

# Async / traits / serialization
async-trait = { workspace = true }
bincode = { workspace = true }

# Time utilities
chrono = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
tokio-test = { workspace = true }
