[package]
name = "neuro-api"
version = "0.1.0"
edition = "2021"

[dependencies]
neuro-core = { path = "../neuro-core" }
neuro-ledger = { path = "../neuro-ledger" }
neuro-proto = { path = "../neuro-proto" }
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
tonic = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
