[package]
name = "ippan-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ippan-types = { path = "../types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
igd = { version = "0.12", features = ["aio", "tokio"] }
local-ip-address = "0.6"
