[package]
name = "ippan-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
integration-tests = []

[dependencies]
ippan-types = { path = "../types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = { workspace = true }
igd = { version = "0.12", features = ["aio", "tokio"] }
local-ip-address = "0.6"

[dev-dependencies]
rand = { version = "0.8", features = ["std", "std_rng"] }
