[package]
name = "ippan-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
integration-tests = []

[dependencies]
ippan-types = { path = "../types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
igd = { workspace = true }
local-ip-address = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
